<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settingsActivityName">
    <EditTextPreference
        android:defaultValue="@string/settings_toDate_default"
        android:digits="@string/toDate_limitedDigits"
        android:hint="@string/settings_toDate_hint"
        android:inputType="phone"
        android:key="@string/settings_toDate_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_toDate_label" />
    <ListPreference
        android:defaultValue="@string/settings_orderBy_default"
        android:entries="@array/settings_orderBy_labels"
        android:entryValues="@array/settings_orderBy_values"
        android:key="@string/settings_orderBy_key"
        android:title="@string/settings_orderBy_label" />
</PreferenceScreen>